crates/dora-compiler/src/wasm/tests/snapshots/dora_compiler__wasm__tests__conversion__extend_i64.snap
---
source: crates/dora-compiler/src/wasm/tests/conversion.rs
expression: op
snapshot_kind: text
---
module {
  func.func @f0(%arg0: !llvm.ptr, %arg1: i64) -> i64 {
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i64 : (i64) -> !llvm.ptr
    llvm.store %arg1, %0 : i64, !llvm.ptr
    cf.br ^bb1
  ^bb1:  // pred: ^bb0
    %1 = llvm.load %0 : !llvm.ptr -> i64
    %c63_i64 = arith.constant 63 : i64
    %c7_i64 = arith.constant 7 : i64
    %c8_i64 = arith.constant 8 : i64
    %c7_i64_0 = arith.constant 7 : i64
    %c63_i64_1 = arith.constant 63 : i64
    %2 = arith.minui %c63_i64, %c7_i64 : i64
    %3 = arith.muli %2, %c8_i64 : i64
    %4 = arith.addi %3, %c7_i64_0 : i64
    %5 = arith.subi %c63_i64_1, %4 : i64
    %6 = llvm.shl %1, %5 : i64
    %7 = llvm.ashr %6, %5  : i64
    cf.br ^bb2(%7 : i64)
  ^bb2(%8: i64):  // pred: ^bb1
    return %8 : i64
  }
  func.func @f1(%arg0: !llvm.ptr, %arg1: i64) -> i64 {
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i64 : (i64) -> !llvm.ptr
    llvm.store %arg1, %0 : i64, !llvm.ptr
    cf.br ^bb1
  ^bb1:  // pred: ^bb0
    %1 = llvm.load %0 : !llvm.ptr -> i64
    %c63_i64 = arith.constant 63 : i64
    %c7_i64 = arith.constant 7 : i64
    %c8_i64 = arith.constant 8 : i64
    %c7_i64_0 = arith.constant 7 : i64
    %c63_i64_1 = arith.constant 63 : i64
    %2 = arith.minui %c63_i64, %c7_i64 : i64
    %3 = arith.muli %2, %c8_i64 : i64
    %4 = arith.addi %3, %c7_i64_0 : i64
    %5 = arith.subi %c63_i64_1, %4 : i64
    %6 = llvm.shl %1, %5 : i64
    %7 = llvm.ashr %6, %5  : i64
    cf.br ^bb2(%7 : i64)
  ^bb2(%8: i64):  // pred: ^bb1
    return %8 : i64
  }
  func.func @f2(%arg0: !llvm.ptr, %arg1: i64) -> i64 {
    %c1_i64 = arith.constant 1 : i64
    %0 = llvm.alloca %c1_i64 x i64 : (i64) -> !llvm.ptr
    llvm.store %arg1, %0 : i64, !llvm.ptr
    cf.br ^bb1
  ^bb1:  // pred: ^bb0
    %1 = llvm.load %0 : !llvm.ptr -> i64
    %c63_i64 = arith.constant 63 : i64
    %c7_i64 = arith.constant 7 : i64
    %c8_i64 = arith.constant 8 : i64
    %c7_i64_0 = arith.constant 7 : i64
    %c63_i64_1 = arith.constant 63 : i64
    %2 = arith.minui %c63_i64, %c7_i64 : i64
    %3 = arith.muli %2, %c8_i64 : i64
    %4 = arith.addi %3, %c7_i64_0 : i64
    %5 = arith.subi %c63_i64_1, %4 : i64
    %6 = llvm.shl %1, %5 : i64
    %7 = llvm.ashr %6, %5  : i64
    cf.br ^bb2(%7 : i64)
  ^bb2(%8: i64):  // pred: ^bb1
    return %8 : i64
  }
  func.func private @dora_fn_wasm_table_init(!llvm.ptr, i32, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_table_fill(!llvm.ptr, i32, i32, !llvm.ptr, i32)
  func.func private @dora_fn_wasm_table_size(!llvm.ptr, i32) -> i32
  func.func private @dora_fn_wasm_table_get(!llvm.ptr, i32, i32) -> !llvm.ptr
  func.func private @dora_fn_wasm_table_set(!llvm.ptr, i32, i32, !llvm.ptr)
  func.func private @dora_fn_wasm_imported_table_size(!llvm.ptr, i32) -> i32
  func.func private @dora_fn_wasm_imported_table_get(!llvm.ptr, i32, i32) -> !llvm.ptr
  func.func private @dora_fn_wasm_imported_table_grow(!llvm.ptr, !llvm.ptr, i32, i32) -> i32
  func.func private @dora_fn_wasm_memory_init(!llvm.ptr, i32, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_memory_fill(!llvm.ptr, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_memory_notify(!llvm.ptr, i32, i32, i32) -> i32
  func.func private @dora_fn_wasm_memory_wait32(!llvm.ptr, i32, i32, i32, i64) -> i32
  func.func private @dora_fn_wasm_memory_wait64(!llvm.ptr, i32, i32, i64, i64) -> i32
  func.func private @dora_fn_wasm_imported_memory_copy(!llvm.ptr, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_imported_memory_fill(!llvm.ptr, i32, i32, i32, i32)
  func.func private @dora_fn_wasm_imported_memory_notify(!llvm.ptr, i32, i32, i32) -> i32
  func.func private @dora_fn_wasm_imported_memory_wait32(!llvm.ptr, i32, i32, i32, i64) -> i32
  func.func private @dora_fn_wasm_imported_memory_wait64(!llvm.ptr, i32, i32, i64, i64) -> i32
  func.func private @dora_fn_wasm_func_ref(!llvm.ptr, i32) -> !llvm.ptr
  func.func private @dora_fn_wasm_data_drop(!llvm.ptr, i32)
  func.func private @dora_fn_wasm_elem_drop(!llvm.ptr, i32)
  func.func private @dora_fn_wasm_raise_trap(!llvm.ptr, i32)
}
